--- a/src/Components/dashboardItem/dashboardItem.module.css
+++ b/src/Components/dashboardItem/dashboardItem.module.css
@@ -52,7 +52,7 @@
     color:#FE4848;
  }
  .state-result a{
-    margin-left: 60px;
+    margin-left: 15em;
     width: 95px;
     height: 30px;
     border-radius:10px;
@@ -68,7 +68,7 @@
     color:black;
  }
  .state-finalize a{
-    margin-left: 60px;
+    margin-left: 15em;
     width: 95px;
     height: 30px;
     border-radius:10px;
